# nodes

./: .gitignore  CMakeLists.txt  Gemfile  README.md  local.sh  test-single.sh  test.sh
ZMQChat.bbprojectd/: paul.bbprojectsettings  project.bbprojectdata  project.lockfile
angular/admin-ui/: angular.json
angular/admin-ui/src/app/: app.component.css  app.component.html  app.component.ts  app.module.ts
angular/admin-ui/src/app/users/: users.component.ts
angular/chat-ui/: package-lock.json  package.json
angular/chat-ui/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.ts  app.module.ts  backend.service.ts  idea.service.ts  idea.ts  stream-open.service.ts  stream.service.ts  stream.ts
angular/chat-ui/src/app/conversation/: conversation.component.html  conversation.component.ts
angular/chat-ui/src/app/idea/: idea.component.ts
angular/chat-ui/src/app/streams/: streams.component.css  streams.component.html  streams.component.ts
angular/login-ui/: angular.json  package-lock.json  package.json  proxy.conf.js
angular/login-ui/src/app/: app-routing.module.ts
angular/login-ui/src/app/login/: login.component.ts
ci/: allnodetests.sh  allnodetests1.sh  allnodetests2.sh  allnodetests3.sh  allnodetests4.sh  allnodetests5.sh  allnodetests6.sh  allnodetests7.sh  allnodetests8.sh  allnodetests9.sh  downstream2.sh  downstream2post.sh  downstream3.sh  downstream3post.sh  downstream4.sh  downstream4post.sh  downstream5.sh  downstream5post.sh  downstream6.sh  downstream6post.sh  downstreamdb2.sh  downstreamdb3.sh  downstreamdb4.sh  downstreamdb5.sh  downstreamdb6.sh  killall.sh  massivetest.sh  massiveup.sh  massiveupdb.sh  nodestest.sh  run.sh  singleallnodestest.sh  singlenodestest.sh  stresstest.sh  upstream.sh  upstreamdb.sh
config/: mongoid.yml  services.rb
dsurf/: project.json
features/: collections.feature  downstream-old.feature  downstream.feature  downstream2.feature  downstream3.feature  downstream4.feature  downstream5.feature  downstream6.feature  groups.feature  ideas.feature  login.feature  manual.feature  massiveup.feature  message.feature  objs.feature  policies.feature  policy-users.feature  streams.feature  upstream.feature  users.feature
features/step_definitions/: collections.rb  db.rb  groups.rb  ideas.rb  objs.rb  send.rb  steps.rb  streams.rb  users.rb
features/support/: env.rb  factories.rb  hooks.rb  ids.rb  policy.rb  services.rb
include/: b64.hpp  bin.hpp  collectioni.hpp  cookie.hpp  data.hpp  date.hpp  downstream.hpp  encrypter.hpp  handler.hpp  json.hpp  log.hpp  security.hpp  server.hpp  session.hpp  storage.hpp  storagei.hpp  upstream.hpp  vid.hpp
include/storage/: collectioni.hpp  cursor.hpp  cursori.hpp  dynamicrow.hpp  result.hpp  resulti.hpp  schema.hpp  schemai.hpp  storagei.hpp
mongodb/: initial.tgz  restore.sh
nginx/: test.conf
nodes.bbprojectd/: paul.bbprojectsettings  project.bbprojectdata  project.lockfile
scripts/: backup-db.sh  build-http.sh  build.sh  groupeditpermissions.json  groupviewpermissions.json  schema.json  start-http.sh  start.sh  stop-http.sh  stop.sh  usereditpermissions.json  useringroups.json  userviewpermissions.json
src/: aggregate.cpp  b64.cpp  bin.cpp  collectioni.cpp  cookie.cpp  cursor.cpp  data.cpp  date.cpp  downstream.cpp  encrypter.cpp  handler.cpp  json.cpp  log.cpp  loginmsg.cpp  nodes.cpp  nodesaggregate.cpp  schema.cpp  security.cpp  server.cpp  session.cpp  storage.cpp  upstream.cpp  vid.cpp  zcadmin.cpp  zcaggregate.cpp  zchttp.cpp  zmqchat.cpp
src/brmsg/: discoverBinary.cpp
src/drmsg/: add.cpp  date.cpp  discover.cpp  discoverBinary.cpp  discoverLocal.cpp  discoverLocalResult.cpp  discoverResult.cpp  heartbeat.cpp  online.cpp  query.cpp  sendOn.cpp  serverBuild.cpp  upd.cpp  upstream.cpp
src/msg/: README.md  addgroup.cpp  addmember.cpp  addnode.cpp  addobject.cpp  addstream.cpp  adduser.cpp  build.cpp  canregister.cpp  certs.cpp  deletegroup.cpp  deleteidea.cpp  deletemember.cpp  deletenode.cpp  deleteobject.cpp  deletestream.cpp  deleteuser.cpp  group.cpp  groups.cpp  ideas.cpp  infos.cpp  login.cpp  members.cpp  message.cpp  moveobject.cpp  newmember.cpp  newuser.cpp  node.cpp  nodes.cpp  object.cpp  objects.cpp  policy.cpp  policygroups.cpp  policyusers.cpp  purge.cpp  purgecount.cpp  purgecountgroups.cpp  purgecountideas.cpp  purgecountstreams.cpp  purgecountusers.cpp  (+24 more)
src/rbrmsg/: discoverBinaryResult.cpp
src/rdrmsg/: ack.cpp  date.cpp  discoverBinaryResult.cpp  discoverLocalResult.cpp  discoverResult.cpp  sendOn.cpp  upstream.cpp
src/rmsmsg/: add.cpp  upd.cpp
src/storage/: collectioni.cpp  cursor.cpp  dynamicrow.cpp  group.cpp  result.cpp  schema.cpp  schemai.cpp  storage.cpp  storagei.cpp
src/storage/fs/: collectioni.cpp  resulti.cpp  schemai.cpp  storagei.cpp
src/storage/mongo/: resulti.cpp  schemai.cpp  storagei.cpp
test/: counts.cpp  generate.cpp  json.cpp  mongo.cpp  send.cpp  storage.cpp  testaggregate.cpp  testb64.cpp  testbin.cpp  testcollection.cpp  testcursor.cpp  testdata.cpp  testdate.cpp  testencrypter.cpp  testhttp.cpp  testjson.cpp  testresult.cpp  testsecurity.cpp  testserver.cpp  testsession.cpp  teststorage.cpp  testvid.cpp
test/media/: aaaaaaaa-bbbb-cccc-dddddddd  eeeeeeee-ffff-gggg-hhhhhhhh  llllllll-mmmm-nnnn-oooooooo  lorem.txt
testdata/doc/: count.json  image.json  library.json
ui/admin-ui/: package-lock.json  package.json
ui/admin-ui/src/app/: app-routing.module.ts  backend.service.ts  user.service.ts
ui/login-ui/: angular.json  package-lock.json  package.json
ui/login-ui/src/app/: backend.service.ts  user.service.ts  user.ts
ui/login-ui/src/app/login/: login.component.html
